# ntulearn-mcp

./: .env.example  .gitignore  .mcpbignore  CLAUDE.md  LICENSE  README.md  manifest.json  pyproject.toml
evals/: REAL_LIFE_TEST_REPORT.md  REPORT.md  evaluation.xml
src/ntulearn_mcp/: cache.py  client.py  cookie.py  models.py  parsers.py  server.py
tests/: test_cache.py  test_client.py  test_cookie.py  test_fixes.py  test_server.py
