[project]
name = "ntulearn-mcp"
version = "0.1.0"
description = "MCP server wrapping the Blackboard Learn REST API for NTULearn"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "browser-cookie3>=0.20.1",
    "httpx>=0.28.1",
    "mcp>=1.27.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
]

[project.scripts]
ntulearn-mcp = "ntulearn_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ntulearn_mcp"]
