[project]
name = "ntulearn-mcp"
version = "0.1.0"
description = "MCP server wrapping the Blackboard Learn REST API for NTULearn (NTU Singapore's LMS)."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "kingdonkatsu", email = "149477947+kingdonkatsu@users.noreply.github.com" },
]
keywords = ["mcp", "ntulearn", "blackboard", "ntu", "singapore", "lms", "education", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "browser-cookie3>=0.20.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
]

[project.urls]
Homepage = "https://github.com/kingdonkatsu/ntulearn-mcp"
Repository = "https://github.com/kingdonkatsu/ntulearn-mcp"
Issues = "https://github.com/kingdonkatsu/ntulearn-mcp/issues"

[project.scripts]
ntulearn-mcp = "ntulearn_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ntulearn_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/.env.example",
    "/pyproject.toml",
]
